--- a/registro-usuarios/src/main/resources/static/FaQ.html
+++ b/registro-usuarios/src/main/resources/static/FaQ.html
@@ -323,72 +323,72 @@
                                             </div>
                                         </div>
                                         <div class="accordion-item mb-3">
-                                            <h2 class="accordion-header" id="headingEleven">
-                                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseEleven" aria-expanded="false" aria-controls="collapseEleven">
+                                            <h2 class="accordion-header" id="headingTwelve">
+                                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwelve" aria-expanded="false" aria-controls="collapseTwelve">
                                                     ¿Cómo debe ser la contraseña de la plataforma?
                                                 </button>
                                             </h2>
-                                            <div id="collapseEleven" class="accordion-collapse collapse" aria-labelledby="headingEleven" data-bs-parent="#faqAccordionTwo">
+                                            <div id="collapseTwelve" class="accordion-collapse collapse" aria-labelledby="headingTwelve" data-bs-parent="#faqAccordionTwo">
                                                 <div class="accordion-body">
                                                     La contraseña de la plataforma debe tener como mínimo 8 caracteres, y al menos una letra mayúscula, otra minúscula, un número y un carácter especial.
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="accordion-item mb-3">
-                                            <h2 class="accordion-header" id="headingTwelve">
-                                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwelve" aria-expanded="false" aria-controls="collapseTwelve">
+                                            <h2 class="accordion-header" id="headingThirteen">
+                                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThirteen" aria-expanded="false" aria-controls="collapseThirteen">
                                                     ¿Cómo modifico mis datos personales?
                                                 </button>
                                             </h2>
-                                            <div id="collapseTwelve" class="accordion-collapse collapse" aria-labelledby="headingTwelve" data-bs-parent="#faqAccordionTwo">
+                                            <div id="collapseThirteen" class="accordion-collapse collapse" aria-labelledby="headingThirteen" data-bs-parent="#faqAccordionTwo">
                                                 <div class="accordion-body">
                                                     Para modificar tus datos personales, debes tener permisos para ello y rol de Director.
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="accordion-item mb-3">
-                                            <h2 class="accordion-header" id="headingThirteen">
-                                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThirteen" aria-expanded="false" aria-controls="collapseThirteen">
+                                            <h2 class="accordion-header" id="headingFourteen">
+                                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFourteen" aria-expanded="false" aria-controls="collapseFourteen">
                                                     ¿Qué datos muestra la tabla de usuarios?
                                                 </button>
                                             </h2>
-                                            <div id="collapseThirteen" class="accordion-collapse collapse" aria-labelledby="headingThirteen" data-bs-parent="#faqAccordionTwo">
+                                            <div id="collapseFourteen" class="accordion-collapse collapse" aria-labelledby="headingFourteen" data-bs-parent="#faqAccordionTwo">
                                                 <div class="accordion-body">
                                                     La tabla de usuarios muestra información como el nombre, apellidos, nombre de usuario, correo, centro educativo y role.
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="accordion-item mb-3">
-                                            <h2 class="accordion-header" id="headingThirteen">
-                                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThirteen" aria-expanded="false" aria-controls="collapseThirteen">
+                                            <h2 class="accordion-header" id="headingFifteen">
+                                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFifteen" aria-expanded="false" aria-controls="collapseFifteen">
                                                     ¿Qué paradas se muestran en el menú principal de la EMT?
                                                 </button>
                                             </h2>
-                                            <div id="collapseThirteen" class="accordion-collapse collapse" aria-labelledby="headingThirteen" data-bs-parent="#faqAccordionTwo">
+                                            <div id="collapseFifteen" class="accordion-collapse collapse" aria-labelledby="headingFifteen" data-bs-parent="#faqAccordionTwo">
                                                 <div class="accordion-body">
                                                     Las paradas que se muestran en el menú principal de la EMT son las más cercanas a tu instituto, en este caso el IES Villaverde.
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="accordion-item mb-3">
-                                            <h2 class="accordion-header" id="headingThirteen">
-                                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThirteen" aria-expanded="false" aria-controls="collapseThirteen">
+                                            <h2 class="accordion-header" id="headingSixteen">
+                                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSixteen" aria-expanded="false" aria-controls="collapseSixteen">
                                                     ¿Cómo funcionan los tiempos de los autobuses de la EMT?
                                                 </button>
                                             </h2>
-                                            <div id="collapseThirteen" class="accordion-collapse collapse" aria-labelledby="headingThirteen" data-bs-parent="#faqAccordionTwo">
+                                            <div id="collapseSixteen" class="accordion-collapse collapse" aria-labelledby="headingSixteen" data-bs-parent="#faqAccordionTwo">
                                                 <div class="accordion-body">
                                                     Los tiempos de espera de los autobuses son en tiempo real y se actualizan al instante, para tener una precisión exacta y una experiencia de usuario satisfactoria.
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="accordion-item mb-3">
-                                            <h2 class="accordion-header" id="headingThirteen">
-                                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThirteen" aria-expanded="false" aria-controls="collapseThirteen">
+                                            <h2 class="accordion-header" id="headingSeventeen">
+                                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSeventeen" aria-expanded="false" aria-controls="collapseSeventeen">
                                                     ¿Cómo puedo visualizar las incidencias de los autobuses de la EMT?
                                                 </button>
                                             </h2>
-                                            <div id="collapseThirteen" class="accordion-collapse collapse" aria-labelledby="headingThirteen" data-bs-parent="#faqAccordionTwo">
+                                            <div id="collapseSeventeen" class="accordion-collapse collapse" aria-labelledby="headingSeventeen" data-bs-parent="#faqAccordionTwo">
                                                 <div class="accordion-body">
                                                     Para visualizar las incidencias de los autobuses en la sección de la EMT debes desplegar el menú de "Incidencias recientes" y seleccionar la que desees ver de forma completa. <br>
                                                     Estas incidencias corresponden solamente a las paradas asociadas al instituto, y también se actualizan en tiempo real.
@@ -396,12 +396,12 @@
                                             </div>
                                         </div>
                                         <div class="accordion-item mb-3">
-                                            <h2 class="accordion-header" id="headingThirteen">
-                                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThirteen" aria-expanded="false" aria-controls="collapseThirteen">
+                                            <h2 class="accordion-header" id="headingEighteen">
+                                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseEighteen" aria-expanded="false" aria-controls="collapseEighteen">
                                                     ¿Cómo funciona el chat público?
                                                 </button>
                                             </h2>
-                                            <div id="collapseThirteen" class="accordion-collapse collapse" aria-labelledby="headingThirteen" data-bs-parent="#faqAccordionTwo">
+                                            <div id="collapseEighteen" class="accordion-collapse collapse" aria-labelledby="headingEighteen" data-bs-parent="#faqAccordionTwo">
                                                 <div class="accordion-body">
                                                     El chat público funciona como un tablón de anuncios o avisos, envías mensajes de manera pública para que todos los usuarios de la plataforma puedan visualizarlos.
                                                 </div>
@@ -428,7 +428,7 @@
             if (token) {
                 fetchUserData(token);
             } else {
-                redirectToLogin();
+      //          redirectToLogin();
             }
         });
 
