--- a/registro-usuarios/src/main/resources/static/register.html
+++ b/registro-usuarios/src/main/resources/static/register.html
@@ -1,176 +1,69 @@
 <!DOCTYPE html>
 <html data-bs-theme="light" lang="en" data-bss-forced-theme="light">
-  <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
-    />
-    <title>Register - Brand</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i&amp;display=swap"
-    />
-    <link rel="stylesheet" href="assets/css/Font%20Awesome%205%20Brands.css" />
-    <link rel="stylesheet" href="assets/css/Font%20Awesome%205%20Free.css" />
-    <link rel="stylesheet" href="assets/css/bootstrap/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="assets/css/fonts/fontawesome-all.min.css" />
-    <link rel="stylesheet" href="assets/css/css/untitled.css" />
-  </head>
 
-  <body class="bg-gradient-primary">
-    <div class="container">
-      <div class="card border-0 shadow-lg o-hidden my-5">
-        <div class="card-body p-0">
-          <div class="row">
-            <div class="col-lg-7">
-              <div class="p-5">
-                <div class="text-center">
-                  <h4 class="text-dark mb-4">Crear Cuenta</h4>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
+  <title>Register - Brand</title>
+  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i&amp;display=swap" />
+  <link rel="stylesheet" href="assets/css/Font%20Awesome%205%20Brands.css" />
+  <link rel="stylesheet" href="assets/css/Font%20Awesome%205%20Free.css" />
+  <link rel="stylesheet" href="assets/css/bootstrap/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="assets/css/fonts/fontawesome-all.min.css" />
+  <link rel="stylesheet" href="assets/css/css/untitled.css" />
+</head>
+<body class="bg-gradient-primary">
+  <div class="container">
+    <div class="card border-0 shadow-lg o-hidden my-5">
+      <div class="card-body p-0">
+        <div class="row">
+          <div class="col-lg-7">
+            <div class="p-5">
+              <div class="text-center">
+                <h4 class="text-dark mb-4">Crear Cuenta</h4>
+              </div>
+              <form id="registrationForm" class="user" onsubmit="checkPasswords(event)">
+                <div class="row mb-3">
+                  <div class="col-sm-6 mb-3 mb-sm-0">
+                    <input class="form-control form-control form-control-user" type="text" id="first_name" name="firstName" placeholder="Nombre" required />
+                  </div>
+                  <div class="col-sm-6">
+                    <input class="form-control form-control form-control-user" type="text" id="last_name" name="lastName" placeholder="Apellidos" required />
+                  </div>
                 </div>
-                <form
-                  id="registrationForm"
-                  class="user"
-                  onsubmit="checkPasswords(event)"
-                >
-                  <div class="row mb-3">
-                    <div class="col-sm-6 mb-3 mb-sm-0">
-                      <input
-                        class="form-control form-control form-control-user"
-                        type="text"
-                        id="first_name"
-                        name="firstName"
-                        placeholder="Nombre"
-                        required
-                      />
-                    </div>
-                    <div class="col-sm-6">
-                      <input
-                        class="form-control form-control form-control-user"
-                        type="text"
-                        id="last_name"
-                        name="lastName"
-                        placeholder="Apellidos"
-                        required
-                      />
-                    </div>
+                <div class="mb-3">
+                  <input class="form-control form-control form-control-user" type="email" id="email_input" name="email" placeholder="Direccion de correo electrónico" required />
+                </div>
+                <div class="row mb-3">
+                  <div class="col-sm-6 mb-3 mb-sm-0">
+                    <input class="form-control form-control form-control-user" type="password" id="password_input" name="password" placeholder="Contraseña" required />
                   </div>
-                  <div class="mb-3">
-                    <input
-                      class="form-control form-control form-control-user"
-                      type="email"
-                      id="email_input"
-                      name="email"
-                      placeholder="Direccion de correo electrónico"
-                      required
-                    />
+                  <div class="col">
+                    <input class="form-control form-control form-control-user" type="password" id="passwordConfirm" name="passwordConfirm" placeholder="Confirmar contraseña" required />
                   </div>
-                  <div class="row mb-3">
-                    <div class="col-sm-6 mb-3 mb-sm-0">
-                      <input
-                        class="form-control form-control form-control-user"
-                        type="password"
-                        id="password_input"
-                        name="password"
-                        placeholder="Contraseña"
-                        required
-                      />
-                    </div>
-                    <div class="col">
-                      <input
-                        class="form-control form-control form-control-user"
-                        type="password"
-                        id="passwordConfirm"
-                        name="passwordConfirm"
-                        placeholder="Confirmar contraseña"
-                        required
-                      />
-                    </div>
-                  </div>
-                  <div class="text-center">
-                    <a class="small"
-                      ></a
-                    >
-                  </div>
-                  <button
-                    class="btn btn-primary d-block btn-user w-100"
-                    type="submit"
-                  >
-                    Crear Cuenta
-                  </button>
-                </form>
-                <div class="text-center" style="padding-top: 15px">
-                   <p id="error" class="error-message"></p>
                 </div>
                 <div class="text-center">
-                  <a class="small" href="login.html"
-                    >¿Ya tiene cuenta? ¡Inicie sesión!</a
-                  >
+                  <a class="small"></a>
                 </div>
+                <button class="btn btn-primary d-block btn-user w-100" type="submit">Crear Cuenta</button>
+              </form>
+              <div class="text-center" style="padding-top: 15px">
+                <p id="error" class="error-message"></p>
+              </div>
+              <div class="text-center">
+                <a class="small" href="login.html">¿Ya tiene cuenta? ¡Inicie sesión!</a>
               </div>
             </div>
-            <div class="col"></div>
           </div>
+          <div class="col"></div>
         </div>
       </div>
     </div>
-    <script>
-      function checkPasswords(event) {
-        event.preventDefault();
-
-        var password = document.getElementById("password_input").value;
-        var passwordConfirm = document.getElementById("passwordConfirm").value;
-
-        if (password !== passwordConfirm) {
-          document.getElementById('error').textContent = "Las contraseñas no coinciden. Por favor, verifica e intenta de nuevo.";
-          document.getElementById('error').style.display= "block";
-          return;
-        }
-
-        // Si las contraseñas coinciden, llamar a la función register
-        register();
-      }
-
-      function register() {
-        var formData = {
-          firstName: document.getElementById("first_name").value,
-          lastName: document.getElementById("last_name").value,
-          email: document.getElementById("email_input").value,
-          password: document.getElementById("password_input").value,
-        };
-
-        fetch("/users/register", {
-          method: "POST",
-          headers: {
-            "Content-Type": "application/json",
-          },
-          body: JSON.stringify(formData),
-        })
-          .then((response) => {
-            if (response.ok) {
-              window.location.href = "/login.html"; // Redirige a la página de login si el registro es exitoso
-            } else {
-              // Procesa la respuesta para mostrar el mensaje de error
-              return response.text().then((text) => {
-                throw new Error(text);
-              });
-            }
-          })
-          .catch((error) => {
-            console.error("Error:", error);
-            document.getElementById('error').textContent = error.message;
-            document.getElementById('error').style.display= "block";
-          });
-      }
-
-      // Agrega el listener al botón de registro para manejar el click
-      document
-        .getElementById("registerButton")
-        .addEventListener("click", register);
-    </script>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/js/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/js/js/theme.js"></script>
-  </body>
+  </div>
+  <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+  <script src="assets/js/bootstrap/js/bootstrap.min.js"></script>
+  <script src="assets/js/js/theme.js"></script>
+  <script src="assets/DDP/js/DDP_register.js"></script>
+</body>
 </html>
