--- a/registro-usuarios/src/main/resources/static/Chat.html
+++ b/registro-usuarios/src/main/resources/static/Chat.html
@@ -77,7 +77,7 @@
             padding: 15px;
             cursor: pointer;
             position: absolute;
-            bottom: 40px;
+            bottom: 55px; /* Ajustar la distancia desde el fondo */
             width: 100%;
         }
 
@@ -86,21 +86,21 @@
             margin-right: 10px;
             width: 50px;
             height: 50px;
-            margin-bottom: 55px;
         }
 
-        .user-info span {
+        .user-details {
+            display: flex;
+            flex-direction: column;
+        }
+
+        .user-name {
             font-size: 1rem;
             color: #ffffff;
-            margin-bottom: 55px;
         }
 
-        .navbar-nav .nav-link {
-            color: rgba(255, 255, 255, 0.8);
-        }
-
-        .navbar-nav .nav-link:hover {
-            color: #ffffff;
+        .user-role {
+            font-size: 0.8rem;
+            color: #b0b0b0;
         }
 
         .logout-button {
@@ -160,7 +160,7 @@
         }
 
         .contact-item:hover {
-            background-color: #7f8183;
+            background-color: #47a8e9;
         }
 
         .contact-item img {
@@ -175,7 +175,7 @@
         }
 
         .contact-item.active {
-            background-color: #495057;
+            background-color: #47a8e9;
         }
 
         .message {
@@ -217,7 +217,7 @@
                 <ul class="navbar-nav text-light flex-grow-1">
                     <li class="nav-item"><a class="nav-link" href="index.html"><i class="fas fa-home"></i><span>Inicio</span></a></li>
                     <li class="nav-item"><a class="nav-link" href="profile.html"><i class="fas fa-user"></i><span>Perfil</span></a></li>
-                    <li class="nav-item"><a class="nav-link" href="table.html"><i class="fas fa-table"></i><span>Usuarios</span></a></li>
+                    <li class="nav-item" id="tableNavItem"><a class="nav-link" href="table.html"><i class="fas fa-table"></i><span>Usuarios</span></a></li>
                     <li class="nav-item"><a class="nav-link" href="FaQ.html"><i class="fas fa-user-circle"></i><span>FaQ</span></a></li>
                     <li class="nav-item"><a class="nav-link" href="Chat.html"><i class="fas fa-user-circle"></i><span>Chat</span></a></li>
                 </ul>
@@ -226,7 +226,10 @@
                 </div>
                 <div class="user-info" data-bs-toggle="dropdown" aria-expanded="false">
                     <img src="" id="userImage" class="img-profile">
-                    <span id="userName">Cargando...</span>
+                    <div class="user-details">
+                        <span id="userName" class="user-name">Cargando...</span>
+                        <span id="userRole" class="user-role">Role</span>
+                    </div>
                 </div>
                 <div class="logout-button">
                     <a class="dropdown-item" href="#" onclick="logout()"><i class="fas fa-sign-out-alt fa-2x"></i></a>
@@ -352,7 +355,9 @@
                         currentUser = data.username; // Guardar el nombre de usuario actual
                         document.getElementById('userName').textContent = data.firstName + ' ' + data.lastName;
                         document.getElementById('userImage').src = data.imageUrl || 'assets/img/default.png';
-
+                        document.getElementById('userRole').textContent = data.roleName || 'Role';
+                        
+                        showOrHideNavItems(data.roleName);
                         fetchContacts();
                     });
                 } else {
@@ -421,6 +426,19 @@
 
         function redirectToLogin() {
             window.location.href = '/login.html';
+        }
+
+        function showOrHideNavItems(role) {
+            const tableNavItem = document.getElementById('tableNavItem');
+            const tableNavItem2 = document.getElementById('tableNavItem2');
+            if (role === 'Director') {
+                tableNavItem.style.display = 'block';
+            } else if (role === 'Alumno') {
+                tableNavItem.style.display = 'none';
+            } else if (role === null) {
+                tableNavItem.style.display = 'none';
+                tableNavItem2.style.display = 'none';
+            }
         }
 
     </script>
