--- a/registro-usuarios/src/main/resources/static/profile.html
+++ b/registro-usuarios/src/main/resources/static/profile.html
@@ -14,29 +14,8 @@
     <link rel="stylesheet" href="assets/css/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/fonts/fontawesome-all.min.css">
     <link rel="stylesheet" href="assets/css/css/untitled.css">
-
-    <style>
-        .text-container {
-            display: flex;
-            flex-direction: column;
-        }
-    
-        #userName {
-            display: block; /* Asegura que se muestren en líneas separadas */
-            text-align: center; /* Centra el texto */
-            margin-right: 15px;
-        }
-    
-        #userRole {
-            display: block; /* Asegura que se muestren en líneas separadas */
-            font-size: 0.8em; /* Tamaño más pequeño */
-            color: rgba(128, 128, 128, 0.7); /* Color gris y un poco difuminado */
-            text-align: right; /* Alinea a la derecha */
-            margin-right: 15px;
-        }
-    </style>
+    <link rel="stylesheet" href="assets/DDP/css/DDP_profile.css">
 </head>
-
 <body id="page-top">
     <div id="wrapper">
         <nav class="navbar align-items-start sidebar sidebar-dark accordion bg-gradient-primary p-0 navbar-dark">
@@ -73,74 +52,6 @@
                                         </div>
                                     </form>
                                 </div>
-                            </li>
-                            <li class="nav-item dropdown no-arrow mx-1">
-                                <div class="nav-item dropdown no-arrow"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#"><span class="badge bg-danger badge-counter">3+</span><i class="fas fa-bell fa-fw"></i></a>
-                                    <div class="dropdown-menu dropdown-menu-end dropdown-list animated--grow-in">
-                                        <h6 class="dropdown-header">alerts center</h6><a class="dropdown-item d-flex align-items-center" href="#">
-                                            <div class="me-3">
-                                                <div class="bg-primary icon-circle"><i class="fas fa-file-alt text-white"></i></div>
-                                            </div>
-                                            <div><span class="small text-gray-500">December 12, 2019</span>
-                                                <p>A new monthly report is ready to download!</p>
-                                            </div>
-                                        </a><a class="dropdown-item d-flex align-items-center" href="#">
-                                            <div class="me-3">
-                                                <div class="bg-success icon-circle"><i class="fas fa-donate text-white"></i></div>
-                                            </div>
-                                            <div><span class="small text-gray-500">December 7, 2019</span>
-                                                <p>$290.29 has been deposited into your account!</p>
-                                            </div>
-                                        </a><a class="dropdown-item d-flex align-items-center" href="#">
-                                            <div class="me-3">
-                                                <div class="bg-warning icon-circle"><i class="fas fa-exclamation-triangle text-white"></i></div>
-                                            </div>
-                                            <div><span class="small text-gray-500">December 2, 2019</span>
-                                                <p>Spending Alert: We've noticed unusually high spending for your account.</p>
-                                            </div>
-                                        </a><a class="dropdown-item text-center small text-gray-500" href="#">Show All Alerts</a>
-                                    </div>
-                                </div>
-                            </li>
-                            <li class="nav-item dropdown no-arrow mx-1">
-                                <div class="nav-item dropdown no-arrow"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#"><i class="fas fa-envelope fa-fw"></i></a>
-                                    <div class="dropdown-menu dropdown-menu-end dropdown-list animated--grow-in">
-                                        <h6 class="dropdown-header">alerts center</h6><a class="dropdown-item d-flex align-items-center" href="#">
-                                            <div class="dropdown-list-image me-3"><img class="rounded-circle" src="assets/img/avatars/avatar4.jpeg">
-                                                <div class="bg-success status-indicator"></div>
-                                            </div>
-                                            <div class="fw-bold">
-                                                <div class="text-truncate"><span>Hi there! I am wondering if you can help me with a problem I've been having.</span></div>
-                                                <p class="small text-gray-500 mb-0">Emily Fowler - 58m</p>
-                                            </div>
-                                        </a><a class="dropdown-item d-flex align-items-center" href="#">
-                                            <div class="dropdown-list-image me-3"><img class="rounded-circle" src="assets/img/avatars/avatar2.jpeg">
-                                                <div class="status-indicator"></div>
-                                            </div>
-                                            <div class="fw-bold">
-                                                <div class="text-truncate"><span>I have the photos that you ordered last month!</span></div>
-                                                <p class="small text-gray-500 mb-0">Jae Chun - 1d</p>
-                                            </div>
-                                        </a><a class="dropdown-item d-flex align-items-center" href="#">
-                                            <div class="dropdown-list-image me-3"><img class="rounded-circle" src="assets/img/avatars/avatar3.jpeg">
-                                                <div class="bg-warning status-indicator"></div>
-                                            </div>
-                                            <div class="fw-bold">
-                                                <div class="text-truncate"><span>Last month's report looks great, I am very happy with the progress so far, keep up the good work!</span></div>
-                                                <p class="small text-gray-500 mb-0">Morgan Alvarez - 2d</p>
-                                            </div>
-                                        </a><a class="dropdown-item d-flex align-items-center" href="#">
-                                            <div class="dropdown-list-image me-3"><img class="rounded-circle" src="assets/img/avatars/avatar5.jpeg">
-                                                <div class="bg-success status-indicator"></div>
-                                            </div>
-                                            <div class="fw-bold">
-                                                <div class="text-truncate"><span>Am I a good boy? The reason I ask is because someone told me that people say this to all dogs, even if they aren't good...</span></div>
-                                                <p class="small text-gray-500 mb-0">Chicken the Dog · 2w</p>
-                                            </div>
-                                        </a><a class="dropdown-item text-center small text-gray-500" href="#">Show All Alerts</a>
-                                    </div>
-                                </div>
-                                <div class="shadow dropdown-list dropdown-menu dropdown-menu-end" aria-labelledby="alertsDropdown"></div>
                             </li>
                             <div class="d-none d-sm-block topbar-divider"></div>
                             <li class="nav-item dropdown no-arrow">
@@ -259,140 +170,8 @@
             </footer>
         </div><a class="d-inline border rounded scroll-to-top" href="#page-top"><i class="fas fa-angle-up"></i></a>
     </div>
-    <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            const token = localStorage.getItem('jwtToken');
-            if (token) {
-                fetchUserData(token);
-            } else {
-                redirectToLogin();
-            }
-        });
-
-        function showOrHideNavItems(role) {
-            const tableNavItem = document.getElementById('tableNavItem');
-            const tableNavItem2 = document.getElementById('tableNavItem2');
-            const alertmsgbutt = document.getElementById('alertmsg');
-            const alertgenbutt = document.getElementById('alertgen');
-            if (role === 'Director') {
-                tableNavItem.style.display = 'block';
-            } else if (role === 'Alumno') {
-                tableNavItem.style.display = 'none';
-            } else if (role === null) {
-                alertmsgbutt.style.display = 'none';
-                alertgenbutt.style.display = 'none';
-                tableNavItem.style.display = 'none';
-                tableNavItem2.style.display = 'none';
-            }
-        }
-
-        function fetchUserData(token) {
-            const userId = getUserIdFromToken(token);
-            console.log("UserID from token:", userId); // Debug: Verifica que el ID se extrae correctamente
-            if (userId) {
-                fetch(`/users/auth/${userId}`, {
-                    method: 'GET',
-                    headers: {
-                        "Authorization": `Bearer ${token}`,
-                        "Content-Type": "application/json"
-                    }
-                })
-                .then(response => {
-                    console.log("Server response:", response); // Debug: Muestra la respuesta del servidor
-                    if (response.ok) {
-                        return response.json();
-                    } else if (response.status === 401) {
-                        redirectToLogin(); // Redirigir al inicio de sesión si el token expiró
-                    } else {
-                        throw new Error(`Failed to fetch user data: ${response.status} ${response.statusText}`);
-                    }
-                })
-                .then(data => {
-                    console.log("User data received:", data); // Debug: Muestra los datos recibidos
-                    if (data) {
-                        document.getElementById('userName').textContent = data.firstName + ' ' + data.lastName;
-                        document.getElementById('userImage').src = data.imageUrl || 'assets/img/default.png';
-                        document.getElementById('userRole').textContent = data.roleName || 'Role';
-                        // Actualizando los datos de usuario
-                        document.getElementById('username').textContent = data.username || 'No disponible';
-                        document.getElementById('email').textContent = data.email || 'No disponible';
-                        document.getElementById('first_name').textContent = data.firstName || 'No disponible';
-                        document.getElementById('last_name').textContent = data.lastName || 'No disponible';
-                        // Actualizando info de contacto
-                        document.getElementById('city').textContent = data.city || 'No disponible';
-                        document.getElementById('centroe').textContent = data.centro || 'No disponible';
-                        document.getElementById('address').textContent = data.address || 'No disponible';
-                        // Imagen
-                        document.getElementById('profileImage').src = data.imageUrl || 'assets/img/default.png';
-
-                        showOrHideNavItems(data.roleName);
-                    }
-                })
-                .catch(error => {
-                    console.error('Error fetching user data:', error);
-                    document.getElementById('userName').textContent = "Error loading data";
-                    redirectToLogin();
-                });
-            } else {
-                console.error('No user ID found in token');
-                document.getElementById('userName').textContent = "Error loading data"; // Mostrar mensaje de error en la UI
-            }
-        }
-
-        function getUserIdFromToken(token) {
-            try {
-                const base64Url = token.split('.')[1];
-                const base64 = base64Url.replace(/-/g, '+').replace(/_/g, '/');
-                const jsonPayload = decodeURIComponent(window.atob(base64).split('').map(function (c) {
-                    return '%' + ('00' + c.charCodeAt(0).toString(16)).slice(-2);
-                }).join(''));
-                const decodedToken = JSON.parse(jsonPayload);
-                return decodedToken.sub; // Assuming 'sub' contains user ID
-            } catch (e) {
-                console.error('Error decoding token:', e);
-                return null;
-            }
-        }
-
-        function redirectToLogin() {
-            window.location.href = '/login.html';
-        }
-
-        function logout() {
-            localStorage.removeItem('jwtToken');
-            location.reload(true);
-        }
-
-        document.getElementById('imageInput').addEventListener('change', function(event) {
-            const file = event.target.files[0];
-            if (file) {
-                const formData = new FormData();
-                formData.append('image', file);
-
-                fetch(`/users/auth/update-image/${getUserIdFromToken(localStorage.getItem('jwtToken'))}`, {
-                    method: 'POST',
-                    body: formData,
-                    headers: {
-                        "Authorization": `Bearer ${localStorage.getItem('jwtToken')}`,
-                    }
-                })
-                .then(response => response.json())
-                .then(data => {
-                    if (data.imageUrl) {
-                        location.reload(true);
-                        //alert('Imagen actualizada correctamente.');
-                    }
-                })
-                .catch((error) => {
-                console.error("Error:", error);
-                document.getElementById('error').textContent = error.message;
-                document.getElementById('error').style.display= "block";
-            });
-            }
-        });
-    </script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/theme.js"></script>
+    <script src="assets/DDP/js/DDP_profile.js"></script>
 </body>
-
 </html>
