redirect en titulo, y cambio contraseña emt

--- a/registro-usuarios/src/main/resources/static/index.html
+++ b/registro-usuarios/src/main/resources/static/index.html
@@ -130,9 +130,9 @@
 <body id="page-top">
     <div id="wrapper">
         <nav class="navbar align-items-start sidebar sidebar-dark accordion bg-gradient-primary p-0 navbar-dark">
-            <div class="container-fluid p-0"><a class="navbar-brand d-flex justify-content-center align-items-center sidebar-brand m-0" href="#">
-                    <div class="sidebar-brand-icon rotate-n-15"><i class="fas fa-book-open"></i></div>
-                    <div class="sidebar-brand-text mx-3" href="index.html"><span>ChatHub</span></div>
+            <div class="container-fluid p-0"><a href="index.html" class="navbar-brand d-flex justify-content-center align-items-center sidebar-brand m-0" href="#">
+                <div class="sidebar-brand-icon rotate-n-15"><i class="fas fa-book-open"></i></div>
+                <div class="sidebar-brand-text mx-3" ><span>Chathub</span></div>
                 </a>
                 <hr class="sidebar-divider my-0">
                 <ul class="navbar-nav text-light" id="accordionSidebar">
@@ -436,7 +436,7 @@
         // Código para manejar las solicitudes a la API y mostrar la información del transporte
         document.addEventListener('DOMContentLoaded', function () {
             const email = 'diego.alonso@baanaloo.com';
-            const password = 'Dadbadb2016';
+            const password = 'Chathub24';
 
             // URL de login
             const loginUrl = 'https://openapi.emtmadrid.es/v2/mobilitylabs/user/login/';
