--- a/registro-usuarios/src/main/resources/static/Chat.html
+++ b/registro-usuarios/src/main/resources/static/Chat.html
@@ -222,9 +222,9 @@
     <div id="wrapper" class="d-flex">
         <nav class="navbar align-items-start sidebar sidebar-dark bg-gradient-primary p-0 navbar-dark" id="chatSidebar">
             <div class="container-fluid d-flex flex-column p-0">
-                <a class="navbar-brand d-flex justify-content-center align-items-center sidebar-brand m-0" href="#">
+                <div class="container-fluid p-0"><a href="index.html" class="navbar-brand d-flex justify-content-center align-items-center sidebar-brand m-0" href="#">
                     <div class="sidebar-brand-icon rotate-n-15"><i class="fas fa-book-open"></i></div>
-                    <div class="sidebar-brand-text mx-3"><span>ChatHub</span></div>
+                    <div class="sidebar-brand-text mx-3" ><span>Chathub</span></div>
                 </a>
                 <hr class="sidebar-divider my-0">
                 <ul class="navbar-nav text-light flex-grow-1">
