--- a/registro-usuarios/src/main/resources/static/FaQ.html
+++ b/registro-usuarios/src/main/resources/static/FaQ.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>FAQ - Brand</title>
+    <title>FAQ - ChatHub</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i&amp;display=swap">
     <link rel="stylesheet" href="assets/css/Font%20Awesome%205%20Brands.css">
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="assets/css/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/fonts/fontawesome-all.min.css">
     <link rel="stylesheet" href="assets/css/css/untitled.css">
-
+    <link rel="icon" href="assets/img/Icon.png" type="image/png">
     <style>
         .text-container {
             display: flex;
@@ -334,6 +334,18 @@
                                             <div id="collapseEighteen" class="accordion-collapse collapse" aria-labelledby="headingEighteen" data-bs-parent="#faqAccordionTwo">
                                                 <div class="accordion-body">
                                                     El chat público funciona como un tablón de anuncios o avisos, envías mensajes de manera pública para que todos los usuarios de la plataforma puedan visualizarlos.
+                                                </div>
+                                            </div>  
+                                        </div>
+                                        <div class="accordion-item mb-3">
+                                            <h2 class="accordion-header" id="headingNineteen">
+                                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseNineteen" aria-expanded="false" aria-controls="collapseNineteen">
+                                                    ¿Cómo funciona el chat privado?
+                                                </button>
+                                            </h2>
+                                            <div id="collapseNineteen" class="accordion-collapse collapse" aria-labelledby="headingNineteen" data-bs-parent="#faqAccordionTwo">
+                                                <div class="accordion-body">
+                                                    En el chat privado selecciona o busca el contacto con el que quieres chatear, escribe un mensaje y envíaselo... Le llegará al instante.
                                                 </div>
                                             </div>
                                         </div>
