--- a/registro-usuarios/src/main/resources/static/Chat.html
+++ b/registro-usuarios/src/main/resources/static/Chat.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Chat - Brand</title>
+    <title>Chat - ChatHub</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i&amp;display=swap">
     <link rel="stylesheet" href="assets/css/Font%20Awesome%205%20Brands.css">
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="assets/css/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/fonts/fontawesome-all.min.css">
     <link rel="stylesheet" href="assets/css/css/untitled.css">
+    <link rel="icon" href="assets/img/Icon.png" type="image/png">
     <style>
         body {
             overflow: hidden;
