--- a/registro-usuarios/src/main/resources/static/index.html
+++ b/registro-usuarios/src/main/resources/static/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Dashboard - Brand</title>
+    <title>Inicio - ChatHub</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i&amp;display=swap">
     <link rel="stylesheet" href="assets/css/Font%20Awesome%205%20Brands.css">
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="assets/css/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/fonts/fontawesome-all.min.css">
     <link rel="stylesheet" href="assets/css/css/untitled.css">
+    <link rel="icon" href="assets/img/Icon.png" type="image/png">
     <style>
         .highlight-green {
             color: green;
@@ -219,8 +220,7 @@
                                 <div class="card-body">
                                     <div class="row align-items-center no-gutters">
                                         <div class="col me-2">
-                                            <div class="text-uppercase fw-bold text-success text-xs mb-1"><span>EMT Transporte</span></div>
-                                            <div class="fw-bold text-dark h5 mb-0"><span>Directo&nbsp;</span></div>
+                                            <div class="text-uppercase fw-bold text-success text-xs mb-1"><span>EMT Transporte Directo</span></div>
                                         </div>
                                         <div class="col-auto">
                                             <i class="fas fa-bus fa-2x text-gray-300"></i>
@@ -246,7 +246,7 @@
                                 <div class="card-body d-flex flex-column">
                                     <div class="row align-items-center no-gutters mb-3">
                                         <div class="col me-2">
-                                            <div class="text-uppercase fw-bold text-info text-xs mb-1"><span>Chat</span></div>
+                                            <div class="text-uppercase fw-bold text-info text-xs mb-1"><span>Chat General</span></div>
                                         </div>
                                         <div class="col-auto"><i class="fas fa-comments fa-2x text-gray-300"></i></div>
                                     </div>
@@ -267,60 +267,107 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-lg-6 offset-xl-0 mb-4">
-                            <div class="card shadow mb-4">
-                                <div class="card-header py-3">
-                                    <h6 class="fw-bold text-primary m-0">Projects</h6>
-                                </div>
-                                <div class="card-body">
-                                    <h4 class="fw-bold small">Programación de servicios y procesos<span class="float-end">20%</span></h4>
-                                    <div class="progress mb-4">
-                                        <div class="progress-bar bg-danger" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width:20%;"><span class="visually-hidden">20%</span></div>
+                        <div class="row mb-4">
+                            <div class="col-lg-6 mb-4">
+                                <div class="card shadow mb-4">
+                                    <div class="card-header py-3">
+                                        <h6 class="fw-bold text-primary m-0">Proyectos</h6>
                                     </div>
-                                    <h4 class="fw-bold small">Acceso a datos&nbsp;<span class="float-end">40%</span></h4>
-                                    <div class="progress mb-4">
-                                        <div class="progress-bar bg-warning" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:40%;"><span class="visually-hidden">40%</span></div>
-                                    </div>
-                                    <h4 class="fw-bold small">Sistemas de gestión empresarial<span class="float-end">60%</span></h4>
-                                    <div class="progress mb-4">
-                                        <div class="progress-bar bg-primary" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width:60%;"><span class="visually-hidden">60%</span></div>
-                                    </div>
-                                    <h4 class="fw-bold small">Desarrollo de interfaces&nbsp;<span class="float-end">80%</span></h4>
-                                    <div class="progress mb-4">
-                                        <div class="progress-bar bg-info" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%;"><span class="visually-hidden">80%</span></div>
-                                    </div>
-                                    <h4 class="fw-bold small">Inglés DAMII&nbsp;<span class="float-end">Complete!</span></h4>
-                                    <div class="progress mb-4">
-                                        <div class="progress-bar bg-success" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width:100%;"><span class="visually-hidden">100%</span></div>
+                                    <div class="card-body">
+                                        <h4 class="fw-bold small">Programación de servicios y procesos<span class="float-end">20%</span></h4>
+                                        <div class="progress mb-4">
+                                            <div class="progress-bar bg-danger" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width:20%;"><span class="visually-hidden">20%</span></div>
+                                        </div>
+                                        <h4 class="fw-bold small">Acceso a datos&nbsp;<span class="float-end">40%</span></h4>
+                                        <div class="progress mb-4">
+                                            <div class="progress-bar bg-warning" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:40%;"><span class="visually-hidden">40%</span></div>
+                                        </div>
+                                        <h4 class="fw-bold small">Sistemas de gestión empresarial<span class="float-end">60%</span></h4>
+                                        <div class="progress mb-4">
+                                            <div class="progress-bar bg-primary" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width:60%;"><span class="visually-hidden">60%</span></div>
+                                        </div>
+                                        <h4 class="fw-bold small">Desarrollo de interfaces&nbsp;<span class="float-end">80%</span></h4>
+                                        <div class="progress mb-4">
+                                            <div class="progress-bar bg-info" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%;"><span class="visually-hidden">80%</span></div>
+                                        </div>
+                                        <h4 class="fw-bold small">Inglés DAMII&nbsp;<span class="float-end">Complete!</span></h4>
+                                        <div class="progress mb-4">
+                                            <div class="progress-bar bg-success" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width:100%;"><span class="visually-hidden">100%</span></div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
-                            <div class="card shadow mb-4">
-                                <div class="card-header py-3">
-                                    <h6 class="fw-bold text-primary m-0">&nbsp;Lista de tareas</h6>
+                            <div class="col-lg-6 mb-4">
+                                <div class="card shadow mb-4">
+                                    <div class="card-header py-3">
+                                        <h6 class="fw-bold text-primary m-0">&nbsp;Lista de tareas</h6>
+                                    </div>
+                                    <ul class="list-group list-group-flush">
+                                        <li class="list-group-item">
+                                            <div class="row align-items-center no-gutters">
+                                                <div class="col me-2">
+                                                    <h6 class="mb-0"><strong>Plan de empresa</strong></h6><span class="text-xs">09:00 AM</span>
+                                                </div>
+                                                <div class="col-auto">
+                                                    <div class="form-check"><input type="checkbox" class="form-check-input" id="formCheck-1"><label class="form-label form-check-label" for="formCheck-1"></label></div>
+                                                </div>
+                                            </div>
+                                        </li>
+                                        <li class="list-group-item">
+                                            <div class="row align-items-center no-gutters">
+                                                <div class="col me-2">
+                                                    <h6 class="mb-0"><strong>Writing inglés tema 5</strong></h6><span class="text-xs">10:00 AM</span>
+                                                </div>
+                                                <div class="col-auto">
+                                                    <div class="form-check"><input type="checkbox" class="form-check-input" id="formCheck-2"><label class="form-label form-check-label" for="formCheck-2"></label></div>
+                                                </div>
+                                            </div>
+                                        </li>
+                                        <li class="list-group-item">
+                                            <div class="row align-items-center no-gutters">
+                                                <div class="col me-2">
+                                                    <h6 class="mb-0"><strong>Programa de vigilancia mediante socket</strong></h6><span class="text-xs">11:00 AM</span>
+                                                </div>
+                                                <div class="col-auto">
+                                                    <div class="form-check"><input type="checkbox" class="form-check-input" id="formCheck-3"><label class="form-label form-check-label" for="formCheck-3"></label></div>
+                                                </div>
+                                            </div>
+                                        </li>
+                                        <li class="list-group-item">
+                                            <div class="row align-items-center no-gutters">
+                                                <div class="col me-2">
+                                                    <h6 class="mb-0"><strong>Ejercicio fragment dinámico Android Studio</strong></h6><span class="text-xs">01:00 PM</span>
+                                                </div>
+                                                <div class="col-auto">
+                                                    <div class="form-check"><input type="checkbox" class="form-check-input" id="formCheck-4"><label class="form-label form-check-label" for="formCheck-4"></label></div>
+                                                </div>
+                                            </div>
+                                        </li>
+                                        <li class="list-group-item">
+                                            <div class="row align-items-center no-gutters">
+                                                <div class="col me-2">
+                                                    <h6 class="mb-0"><strong>Distribución de aplicaciones</strong></h6><span class="text-xs">03:00 PM</span>
+                                                </div>
+                                                <div class="col-auto">
+                                                    <div class="form-check"><input type="checkbox" class="form-check-input" id="formCheck-5"><label class="form-label form-check-label" for="formCheck-5"></label></div>
+                                                </div>
+                                            </div>
+                                        </li>
+                                        <li class="list-group-item">
+                                            <div class="row align-items-center no-gutters">
+                                                <div class="col me-2">
+                                                    <h6 class="mb-0"><strong>Test unitarios y empaquetado</strong></h6><span class="text-xs">04:00 PM</span>
+                                                </div>
+                                                <div class="col-auto">
+                                                    <div class="form-check"><input type="checkbox" class="form-check-input" id="formCheck-6"><label class="form-label form-check-label" for="formCheck-6"></label></div>
+                                                </div>
+                                            </div>
+                                        </li>
+                                    </ul>
+                                    
                                 </div>
-                                <ul class="list-group list-group-flush list-group-flush">
-                                    <li class="list-group-item">
-                                        <div class="row align-items-center no-gutters">
-                                            <div class="col me-2">
-                                                <h6 class="mb-0"><strong>Aprobar acceso a datos&nbsp;</strong></h6><span class="text-xs">10:30 AM</span>
-                                            </div>
-                                            <div class="col-auto">
-                                                <div class="form-check"><input type="checkbox" class="form-check-input" id="formCheck-1"><label class="form-label form-check-label" for="formCheck-1"></label></div>
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <li class="list-group-item">
-                                        <div class="row align-items-center no-gutters">
-                                            <div class="col me-2">
-                                                <h6 class="mb-0"><strong>Hacer práctica Móviles</strong></h6><span class="text-xs">11:30 AM</span>
-                                            </div>
-                                            <div class="col-auto">
-                                                <div class="form-check"><input type="checkbox" class="form-check-input" id="formCheck-2"><label class="form-label form-check-label" for="formCheck-2"></label></div>
-                                            </div>
-                                        </div>
-                                    </li>
-                                </ul>
+                            </div>
+                        </div>
                             </div>
                         </div>
                     </div>
