--- a/registro-usuarios/src/main/resources/static/register.html
+++ b/registro-usuarios/src/main/resources/static/register.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
-  <title>Register - Brand</title>
+  <title>Registrarse - ChatHub</title>
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i&amp;display=swap" />
   <link rel="stylesheet" href="assets/css/Font%20Awesome%205%20Brands.css" />
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="assets/css/bootstrap/css/bootstrap.min.css" />
   <link rel="stylesheet" href="assets/css/fonts/fontawesome-all.min.css" />
   <link rel="stylesheet" href="assets/css/css/untitled.css" />
+  <link rel="icon" href="assets/img/Icon.png" type="image/png">
 </head>
 <body class="bg-gradient-primary">
   <div class="container">
@@ -56,7 +57,7 @@
               </div>
             </div>
           </div>
-          <div class="col"></div>
+          <div class="col"><img src="assets/img/logoEduca.svg" style="width: 100%;"></div>
         </div>
       </div>
     </div>
